# pkginfo

./: pyproject.toml
pkginfo/: cli.py  langs_info.py
tests/: test_pkg_info.py
